--- a/nelify.toml
+++ b/nelify.toml
@@ -1,6 +1,6 @@
 [[redirects]]
-     from = "/api/"
-     to = "https://www.runoob.com/"
+     from = "/api/try/ajax/"
+     to = "https://www.runoob.com/try/ajax/"
      status = 200
      force = true # COMMENT: ensure that we always redirect
      headers = {X-From = "Netlify"}
