--- a/nelify.toml
+++ b/nelify.toml
@@ -1,6 +1,6 @@
 [[redirects]]
-     from = "/currency"
-     to = "https://api.mytokenapi.com/currency/"
+     from = "/currency/*"
+     to = "https://api.mytokenapi.com/currency/:splat"
      status = 200
      force = true # COMMENT: ensure that we always redirect
      headers = {X-From = "Netlify"}
