--- a/nelify.toml
+++ b/nelify.toml
@@ -1,11 +1,14 @@
+[build]
+publish="public"
 [[redirects]]
      from = "/currency/*"
-     to = "https://api.mytokenapi.com/currency/:splat"
+     to = "https://api.mytokenapi.com/currency/:sqlat"
      status = 200
+    # defaults to 302 
      force = true # COMMENT: ensure that we always redirect
-     headers = {X-From = "Netlify"}
+     headers = {"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36" }
 
-[[headers]]
-    for="/*"
-    [headers.values]
-    Acces-Control-Allow-Origin="*"
+# [[headers]]
+#    for="/*"
+#    [headers.values]
+#   Acces-Control-Allow-Origin="*"
